welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:2: error: Missing closing brace `}' assumed here
var i=0
^Runner:16: error: ';' expected but ',' found.
pour un coté, il faut faire quatre pas en avant, deux pas à gauche,
            ^