welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
var i=0
var k=0

for (k <- 1 to 7)
{
	for (i <- 1 to 4 )
	{
		avance();avance();avance();avance();
		gauche();avance();avance()
		droite();avance();avance();avance();avance();
		droite();avance();avance();
		gauche();avance();avance();avance();avance();

}
pour un coté, il faut faire quatre pas en avant, deux pas à gauche,
quatre pas à droite, deux pas à droite, et quatre pas à gauche. 
Il faut faire 7 tours de circuit.
